Fix UI elements overflow when collapsed

--- a/src/InputViewer.scss
+++ b/src/InputViewer.scss
@@ -18,6 +18,7 @@ html, body {
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #DevOverlay {
